--- a/.girar/build
+++ b/.girar/build
@@ -4,3 +4,5 @@
 # - SERVER: hostname of the server where project will be builded;
 # Server must be added in girar, in specified `build' location.
 # To see server list use girar command "servers".
+vps2006.mtu.immo
+
