--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "isomorphic-loader": "^1.6.4",
     "js-cookie": "^2.2.0",
     "jsdom": "^11.5.1",
+    "mobile-detect": "^1.3.7",
     "moment": "^2.19.1",
     "morgan": "^1.9.0",
     "qs": "^6.5.1",
@@ -49,6 +50,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "request-ip": "^2.0.2",
     "transit-immutable-js": "^0.7.0",
     "transit-js": "^0.8.846",
     "url-parse": "^1.2.0"
