--- a/config/development/.env
+++ b/config/development/.env
@@ -1,1 +1,1 @@
-TEST_API_URL=http://pbr-wifc-mts-money.alekseenko.vps7095.mtu.immo/admin/api/
+API_URL=http://pbr-wifc-mts-money.alekseenko.vps7095.mtu.immo/admin/api/
