--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha './src",
     "build": "set NODE_ENV=production && webpack -p",
     "dev": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0",
     "nodemon": "set NODE_ENV=development && nodemon app.js"
@@ -59,13 +59,16 @@
     "babel-loader": "^7.1.2",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "expect": "^21.2.1",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "json-loader": "^0.5.7",
+    "mocha": "^4.0.1",
     "nodemon": "^1.12.1",
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.6.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
