--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "mocha './src",
+    "test": "mocha \"./src/Tests/*.js\" --require babel-core/register",
     "build": "set NODE_ENV=production && webpack -p",
     "dev": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0",
     "nodemon": "set NODE_ENV=development && nodemon app.js"
@@ -25,6 +25,7 @@
     "classnames": "^2.2.5",
     "clone": "^2.1.1",
     "compression": "^1.7.1",
+    "connected-react-router": "^4.3.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "es6-promise": "^4.1.1",
@@ -34,12 +35,10 @@
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-loader": "^1.6.4",
     "js-cookie": "^2.2.0",
-    "jsdom": "^11.5.1",
     "mobile-detect": "^1.3.7",
     "moment": "^2.19.1",
     "morgan": "^1.9.0",
     "qs": "^6.5.1",
-    "query-string": "^5.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-input-mask": "^1.0.7",
@@ -65,6 +64,8 @@
     "html-loader": "^0.5.1",
     "json-loader": "^0.5.7",
     "mocha": "^4.0.1",
+    "mocha-jsdom": "^1.1.0",
+    "jsdom": "^11.5.1",
     "nodemon": "^1.12.1",
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.6.0",
