--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "morgan": "^1.9.0",
     "qs": "^6.5.1",
     "react": "^16.0.0",
+    "react-autocomplete": "^1.7.2",
     "react-dom": "^16.0.0",
     "react-input-mask": "^1.0.7",
     "react-redux": "^5.0.6",
