--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "qs": "^6.5.1",
     "react": "^16.0.0",
     "react-autocomplete": "^1.7.2",
+    "react-autosuggest": "^9.3.2",
     "react-dom": "^16.0.0",
     "react-input-mask": "^1.0.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
+    "react-simple-autocomplete": "^1.0.2",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
