--- a/package.json
+++ b/package.json
@@ -4,10 +4,24 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "mocha \"./src/Tests/*.js\" --require babel-core/register",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "testMocha": "mocha \"./src/Tests/*.js\" --require babel-core/register",
     "build": "set NODE_ENV=production && webpack -p",
     "dev": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0",
     "nodemon": "set NODE_ENV=development && nodemon app.js"
+  },
+  "jest": {
+    "setupFiles": [
+      "./src/Tests/jestsetup.js"
+    ],
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/enzyme-to-json/serializer"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(css|scss|styl)$": "identity-obj-proxy"
+    }
   },
   "author": "",
   "license": "ISC",
@@ -39,10 +53,11 @@
     "moment": "^2.19.1",
     "morgan": "^1.9.0",
     "qs": "^6.5.1",
-    "react": "^16.0.0",
+    "react": "^15.6.2",
     "react-autocomplete": "^1.7.2",
     "react-autosuggest": "^9.3.2",
-    "react-dom": "^16.0.0",
+    "react-date-picker": "^6.5.2",
+    "react-dom": "^15.6.2",
     "react-input-mask": "^1.0.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
@@ -58,22 +73,29 @@
     "url-parse": "^1.2.0"
   },
   "devDependencies": {
+    "babel-jest": "^22.0.4",
     "babel-loader": "^7.1.2",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-to-json": "^3.3.0",
     "expect": "^21.2.1",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.0.4",
+    "jsdom": "^11.5.1",
     "json-loader": "^0.5.7",
     "mocha": "^4.0.1",
     "mocha-jsdom": "^1.1.0",
-    "jsdom": "^11.5.1",
     "nodemon": "^1.12.1",
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.6.0",
     "react-addons-test-utils": "^15.6.2",
     "react-hot-loader": "^1.3.1",
+    "react-test-renderer": "^15.6.2",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
