--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "testMocha": "mocha \"./src/Tests/*.js\" --require babel-core/register",
+    "testMocha": "mocha \"./src/Tests/functTest.js\" --require babel-core/register",
     "build": "set NODE_ENV=production && webpack -p",
     "dev": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0",
     "nodemon": "set NODE_ENV=development && nodemon app.js"
@@ -53,17 +53,16 @@
     "moment": "^2.19.1",
     "morgan": "^1.9.0",
     "qs": "^6.5.1",
-    "react": "^15.6.2",
-    "react-autocomplete": "^1.7.2",
+    "react": "^16.2.0",
     "react-autosuggest": "^9.3.2",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-date-picker": "^6.5.2",
-    "react-dom": "^15.6.2",
+    "react-dom": "^16.2.0",
     "react-input-mask": "^1.0.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
-    "react-simple-autocomplete": "^1.0.2",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
