--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,6 +1,7 @@
 {
+  "11050.ttf": "808f15c7bbee38a93f5d1cc57e717cc5.ttf",
   "favicon.ico": "fd73a6eb26a08ee46e7fd3cc34e7f6bf.ico",
-  "main.css": "styles-38957ca06d92c88e8e22.css",
-  "main.js": "bundle-38957ca06d92c88e8e22.js",
+  "main.css": "styles-c9164076ae2e52c519ee.css",
+  "main.js": "bundle-c9164076ae2e52c519ee.js",
   "roller.gif": "1e4a752488cf96e496df4f35a54845f2.gif"
 }
