--- a/.isomorphic-loader-config.json
+++ b/.isomorphic-loader-config.json
@@ -1,12 +1,31 @@
 {
   "valid": true,
   "version": "1.6.4",
-  "timestamp": 1515575280732,
+  "timestamp": 1515580190011,
   "context": "",
   "output": {
     "path": "public/assets/",
-    "filename": "bundle-[hash].js",
-    "publicPath": "/assets/"
+    "filename": "bundle.js",
+    "publicPath": "http://localhost:8050/public/assets"
   },
+  "assets": {
+    "marked": {
+      "public\\img\\roller.gif": "1e4a752488cf96e496df4f35a54845f2.gif",
+      "public\\favicon.ico": "fd73a6eb26a08ee46e7fd3cc34e7f6bf.ico"
+    },
+    "chunks": {
+      "main": [
+        "bundle.js",
+        "0.28276fbebe29b566b768.hot-update.js",
+        "styles.css"
+      ]
+    }
+  },
+  "webpackDev": {
+    "skipSetEnv": false,
+    "url": false,
+    "addUrl": true
+  },
+  "isWebpackDev": true,
   "assetsFile": "public\\assets\\isomorphic-assets.json"
 }
