--- a/package.json
+++ b/package.json
@@ -30,35 +30,36 @@
     "babel-core": "^6.26.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "bluebird": "^3.5.0",
+    "babel-register": "^6.26.0",
+    "bluebird": "^3.5.1",
     "classnames": "^2.2.5",
     "clone": "^2.1.1",
     "compression": "^1.7.1",
     "connected-react-router": "^4.3.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
-    "es6-promise": "^4.1.1",
-    "express": "^4.16.1",
+    "es6-promise": "^4.2.2",
+    "express": "^4.16.2",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-loader": "^1.6.4",
     "js-cookie": "^2.2.0",
-    "mobile-detect": "^1.3.7",
-    "moment": "^2.19.1",
+    "mobile-detect": "^1.4.1",
+    "moment": "^2.20.1",
     "morgan": "^1.9.0",
+    "pbr-lib-front-utils": "git+ssh://git.immo/repositories/pbr-lib-front-utils.git",
     "qs": "^6.5.1",
     "react": "^16.2.0",
     "react-autosuggest": "^9.3.2",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-date-picker": "^6.5.2",
     "react-dom": "^16.2.0",
-    "react-input-mask": "^1.0.7",
+    "react-input-mask": "^1.1.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
@@ -72,25 +73,28 @@
     "url-parse": "^1.2.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-jest": "^22.0.4",
     "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.8",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-15": "^1.0.5",
     "enzyme-to-json": "^3.3.0",
     "expect": "^21.2.1",
     "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^1.1.5",
-    "html-loader": "^0.5.1",
+    "file-loader": "^1.1.6",
+    "html-loader": "^0.5.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.0.4",
+    "jest": "^22.0.5",
     "jsdom": "^11.5.1",
     "json-loader": "^0.5.7",
     "mocha": "^4.0.1",
     "mocha-jsdom": "^1.1.0",
-    "nodemon": "^1.12.1",
-    "postcss-loader": "^2.0.6",
+    "nodemon": "^1.14.10",
+    "postcss-loader": "^2.0.10",
     "prop-types": "^15.6.0",
     "react-addons-test-utils": "^15.6.2",
     "react-hot-loader": "^1.3.1",
@@ -99,8 +103,8 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.9",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.10.1",
     "webpack-manifest-plugin": "^1.3.2"
   }
 }
