--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,7 +1,8 @@
 {
-  "11050.ttf": "808f15c7bbee38a93f5d1cc57e717cc5.ttf",
+  "11050.ttf": "d41d8cd98f00b204e9800998ecf8427e.ttf",
+  "Montserrat-Regular.ttf": "9c46095118380d38f12e67c916b427f9.ttf",
   "favicon.ico": "fd73a6eb26a08ee46e7fd3cc34e7f6bf.ico",
-  "main.css": "styles-4edffd0dc773f46e20f1.css",
-  "main.js": "bundle-4edffd0dc773f46e20f1.js",
+  "main.css": "styles-ba80b6b02c2248e4ae96.css",
+  "main.js": "bundle-ba80b6b02c2248e4ae96.js",
   "roller.gif": "1e4a752488cf96e496df4f35a54845f2.gif"
 }
