--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "testMocha": "mocha \"./src/Tests/functTest.js\" --require babel-core/register",
+    "testMocha": "mocha \"./Tests/functTest.js\" --require babel-core/register",
     "build": "set NODE_ENV=production && webpack -p",
     "dev": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0",
     "nodemon": "set NODE_ENV=development && nodemon app.js"
   },
   "jest": {
     "setupFiles": [
-      "./src/Tests/jestsetup.js"
+      "./Tests/jestsetup.js"
     ],
     "snapshotSerializers": [
       "<rootDir>/node_modules/enzyme-to-json/serializer"
@@ -44,6 +44,7 @@
     "dotenv": "^4.0.0",
     "es6-promise": "^4.2.2",
     "express": "^4.16.2",
+    "fetch-mock": "^6.0.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
@@ -56,7 +57,7 @@
     "qs": "^6.5.1",
     "react": "^16.2.0",
     "react-autosuggest": "^9.3.2",
-    "react-date-picker": "^6.7.0",
+    "react-datetime": "^2.11.1",
     "react-dom": "^16.2.0",
     "react-input-mask": "^1.1.0",
     "react-redux": "^5.0.6",
@@ -72,21 +73,20 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-jest": "^22.0.4",
+    "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.8",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-15": "^1.0.5",
-    "enzyme-to-json": "^3.3.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "expect": "^21.2.1",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.0.5",
+    "jest": "^22.1.2",
     "jsdom": "^11.5.1",
     "json-loader": "^0.5.7",
     "mocha": "^4.0.1",
@@ -96,13 +96,14 @@
     "prop-types": "^15.6.0",
     "react-addons-test-utils": "^15.6.2",
     "react-hot-loader": "^1.3.1",
-    "react-test-renderer": "^15.6.2",
+    "redux-mock-store": "^1.4.0",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.9",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.1",
-    "webpack-manifest-plugin": "^1.3.2"
+    "webpack-manifest-plugin": "^1.3.2",
+    "moxios": "^0.4.0"
   }
 }
