--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "json-loader": "^0.5.7",
     "mocha": "^4.0.1",
     "mocha-jsdom": "^1.1.0",
+    "moxios": "^0.4.0",
     "nodemon": "^1.14.10",
     "postcss-loader": "^2.0.10",
     "prop-types": "^15.6.0",
@@ -104,7 +105,6 @@
     "url-loader": "^0.5.9",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.1",
-    "webpack-manifest-plugin": "^1.3.2",
-    "moxios": "^0.4.0"
+    "webpack-manifest-plugin": "^1.3.2"
   }
 }
