Fix bugs and change store init

--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,8 +1,6 @@
 {
   "11050.ttf": "d41d8cd98f00b204e9800998ecf8427e.ttf",
   "Montserrat-Regular.ttf": "9c46095118380d38f12e67c916b427f9.ttf",
-  "favicon.ico": "fd73a6eb26a08ee46e7fd3cc34e7f6bf.ico",
-  "main.css": "styles-fa22ee8fa32c48ba8de6.css",
-  "main.js": "bundle-fa22ee8fa32c48ba8de6.js",
-  "roller.gif": "1e4a752488cf96e496df4f35a54845f2.gif"
+  "main.css": "styles-8755fbf02b5a08a83612.css",
+  "main.js": "bundle-8755fbf02b5a08a83612.js"
 }
