--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
-    "isomorphic-loader": "^1.6.4",
     "js-cookie": "^2.2.0",
     "mobile-detect": "^1.4.1",
     "moment": "^2.20.1",
@@ -56,6 +55,7 @@
     "pbr-lib-front-utils": "git+ssh://git.immo/repositories/pbr-lib-front-utils.git",
     "qs": "^6.5.1",
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-autosuggest": "^9.3.2",
     "react-datetime": "^2.11.1",
     "react-dom": "^16.2.0",
