--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-autosuggest": "^9.3.2",
+    "react-awesome-popover": "^2.0.3",
     "react-datetime": "^2.11.1",
     "react-dom": "^16.2.0",
     "react-input-mask": "^1.1.0",
