--- a/config/production/.env
+++ b/config/production/.env
@@ -1,1 +1,2 @@
 API_URL=http://pbr-wifc-mts-money.vps1069.by.immo/api/post_request
+LOG_FILE=/home/project/data/pbr-wifc-dengi-mts-by/logs/access.log
