--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "request-ip": "^2.0.2",
+    "rotating-file-stream": "^1.3.5",
     "transit-immutable-js": "^0.7.0",
     "transit-js": "^0.8.846"
   },
